--- a/.github/workflows/today.yml
+++ b/.github/workflows/today.yml
@@ -1,8 +1,7 @@
 name: get the results of today
 on:
   schedule:
-    - cron: '15 0,3,6 * 5-10 2-6'
-    - cron: '05 0 * 5-10 0,1'
+    - cron: '15 0,3,6 * 5-10 *'
   workflow_dispatch:
 
 jobs:
