--- a/.github/workflows/today.yml
+++ b/.github/workflows/today.yml
@@ -1,7 +1,8 @@
 name: get the results of today
 on:
   schedule:
-    - cron: '15 0,3,6 * 5-10 *'
+    - cron: '15 0,3,6 * 8-10 *'
+    - cron: '15 0,3,6 21-31 7 *'
   workflow_dispatch:
 
 jobs:
